Added code to enable testing

--- a/homework/hw2/build.gradle
+++ b/homework/hw2/build.gradle
@@ -16,3 +16,7 @@ jar {
                 'Main-Class': 'edu.stevens.jisrael.cs511.assignment2.Assignment2')
   }
 }
+
+dependencies {
+  testCompile 'junit:junit:4.11'
+}
